@@ -1,30 +1,3 @@
-Picked up JAVA_TOOL_OPTIONS: --add-opens=java.base/java.nio=ALL-UNNAMED
-Flyway OSS Edition 11.2.0 by Redgate
+echo "##vso[task.setvariable variable=ACCESS_TOKEN;issecret=false]$ACCESS_TOKEN"
 
-See release notes here: https://rd.gt/416ObMi
-Apr 01, 2025 1:14:08 PM net.snowflake.client.jdbc.SnowflakeConnectionV1 initConnectionWithImpl
-INFO: Initializing new connection
-Apr 01, 2025 1:14:08 PM net.snowflake.client.jdbc.DefaultSFConnectionHandler initLogger
-INFO: Setting logger with log level OFF and log pattern %h/snowflake_jdbc%u.log
-+--------------------------------------+
-| QUERY_ID                             |
-+--------------------------------------+
-| 01bb6582-0305-fc6e-004f-f50270111fab |
-+--------------------------------------+
-
-QUOTED_IDENTIFIERS_IGNORE_CASE option is false
-Database: jdbc:snowflake://eo20589.west-europe.privatelink.snowflakecomputing.com:443/ (Snowflake 9.7)
-WARNING: Flyway upgrade recommended: Snowflake 9.7 is newer than this version of Flyway and support has not been tested. The latest supported version of Snowflake is 8.3.
-+--------------------------------------+
-| QUERY_ID                             |
-+--------------------------------------+
-| 01bb6582-0305-fc6e-004f-f50270111fcb |
-+--------------------------------------+
-
-Schema version: 0.0.363
-
-+------------+---------+---------------------------------------------------+------+---------------------+---------+----------+
-| Category   | Version | Description                                       | Type | Installed On        | State   | Undoable |
-+------------+---------+---------------------------------------------------+------+---------------------+---------+----------+
-| Versioned  | 0.0.1   | init                                              | SQL  | 2022-02-23 14:21:13 | Success | No       |
-+------------+---------+---------------------------------------------------+------+---------------------+---------+----------+
+echo "Access Token: $ACCESS_TOKEN"
